--- a/README
+++ b/README
@@ -1,21 +1,19 @@
-RNNoise is a noise suppression library based on a recurrent neural network.
+# RNNoise on docker
 
-To compile, just type:
-% ./autogen.sh
-% ./configure
-% make
+A dockerized version of [RNNoise](https://github.com/xiph/rnnoise), noise suppression library based on a recurrent neural network.
 
-Optionally:
-% make install
+## Getting started
 
-While it is meant to be used as a library, a simple command-line tool is
-provided as an example. It operates on RAW 16-bit (machine endian) mono
+1. Place your input audio under `examples/noisy.wav`
+2. Run the provided docker-compose file
+```shell
+docker-compose up
+```
+3. The denoised file is available at `examples/denoised.dat`
+
+
+### Notes
+This denoiser operates on RAW 16-bit (machine endian) mono
 PCM files sampled at 48 kHz. It can be used as:
 
-./examples/rnnoise_demo <noisy speech> <output denoised>
-
 The output is also a 16-bit raw PCM file.
-
-The latest version of the source is available from
-https://gitlab.xiph.org/xiph/rnnoise .  The github repository
-is a convenience copy.
